# Web-Legal-Compliance-AI-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  ISSUES_AND_FIXES.md  ISSUE_TODO.md  LICENSE  README.md  TODO.md  app.py  architecture.md  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py
api/routers/: analyze.py  chat.py  parse.py  search.py
data/laws/: 개인정보보호법.html  신용정보법.html  안정성확보조치기준.html  위치정보법.html  전자상거래법.html  정보통신법.html  청소년보호법.html
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: build_graph.py  entrypoint.sh  load_html_laws.py  setup_index.py
src/agents/: _base_agent.py  citation.py  legal_agent.py  orchestrator.py  privacy_agent.py  security_agent.py  service_agent.py
src/cache/: semantic_cache.py  url_cache.py
src/collector/: case_api.py  domain.py  law_api.py  law_content_api.py  law_list_api.py  parser.py  scheduler.py
src/core/: config.py  logger.py  models.py
src/embedder/: chunker.py  indexer.py
src/graph/: law_graph.py  reference_parser.py
src/input/: file_loader.py  token_splitter.py  url_parser.py
src/integrity/: db.py  hasher.py
src/retrieval/: bm25.py  cache.py  dynamic_topk.py  graph_expander.py  hybrid.py  query_rewriter.py  rrf.py  vector.py
src/session/: conversation.py
src/streaming/: llm_queue.py  redis_stream.py
src/worker/: llm_worker.py
src/workers/: agent_worker.py
tests/: conftest.py  test_setup_index.py
tests/agents/: test_base_agent.py  test_citation.py  test_legal_agent.py  (+4 more)
(+47 files in other folders)
